--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     </head>
 
     <body>
+
         <canvas></canvas>
+        <script src="https://cdn.jsdelivr.net/npm/tweakpane@3.1.0/dist/tweakpane.min.js"></script>
         <script src="./index.js"></script>
     </body>
 
