--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <link rel="stylesheet" href="./index.css">
 
-        <script src="./scripts/Agent.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tweakpane@3.1.0/dist/tweakpane.min.js"></script>
     </head>
 
     <body>
         <canvas></canvas>
+        <script src="./config.js"></script>
         <script src="./index.js"></script>
     </body>
 
