--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="./index.css">
+  <head>
+    <link rel="stylesheet" href="./index.css" />
 
-        <script src="https://cdn.jsdelivr.net/npm/tweakpane@3.1.0/dist/tweakpane.min.js"></script>
-    </head>
+    <script src="https://cdn.jsdelivr.net/npm/tweakpane@3.1.0/dist/tweakpane.min.js"></script>
+  </head>
 
-    <body>
-        <canvas></canvas>
-        <script src="./config.js"></script>
-        <script src="./index.js"></script>
-    </body>
-
+  <body>
+    <canvas></canvas>
+    <script src="./config.js"></script>
+    <script src="./index.js"></script>
+  </body>
 </html>
